class AdminController {
    static processLockUser(socket, data) {

    }
    static processUnlockUser(socket, data) {

    }
    static processRemoveUser(socket, data) {

    }
    static processViewSystemInfo(socket, data) {
        
    }
}