class FriendController {
    static processFriendRequest(socket, data) {

    }
    static processFriendRequestAccept(socket, data) {

    }
    static processFriendRequestRefuse(socket, data) {

    }
    static processViewFriendList(socket, data) {

    }
    static processRemoveFriend(socket, data) {

    }
}