class MessageController {
    static processSendMessage(socket, data) {
        
    }
    static processViewMessage(socket, data) {
        
    }
}